@@ -46,8 +46,8 @@ sub gst_service_list_get_info
 		"cupsys"            =>	[ _("Common Unix Printing System"), "" ],
     "daytime"           =>      [ "", _("An internal xinetd service which gets the current system time then prints it out in a format like this: 'Wed Nov 13 22:30:27 EST 2002'.  This is the tcp version. You must enable xinetd to use this service.") ],
     "daytime-udp"   =>      [ "", _("An internal xinetd service which gets the current system time then prints it out in a format like this: 'Wed Nov 13 22:30:27 EST 2002'.  This is the udp version. You must enable xinetd to use this service.") ],
-    "ddclient"      =>      [ _("Dinamic DNS Client"), _("A Dinamic DNS Name service from www.dyndns.org") ],
-    "dhis-client"   =>      [ _("Dinamic DNS Client"), _("A Dinamic DNS Name service from www.dhis.org") ],
+    "ddclient"      =>      [ _("Dynamic DNS Client"), _("A Dynamic DNS Name service from www.dyndns.org") ],
+    "dhis-client"   =>      [ _("Dynamic DNS Client"), _("A Dynamic DNS Name service from www.dhis.org") ],
     "dictd"         =>      [ _("Dict Dictionary Server"), _("Dict Dictionary Server") ],
     "echo"              =>      [ "", _("An xinetd internal service which echo's characters back to clients.  This is the tcp version. You must enable xinetd to use this service.") ],
     "echo-udp"          =>      [ "", _("An xinetd internal service which echo's characters back to clients.  This is the udp version. You must enable xinetd to use this service.") ],
@@ -55,9 +55,9 @@ sub gst_service_list_get_info
     "fam"               =>  [ _("file alteration monitor"), "" ],
     "firstboot"         =>      [ "", _("Firstboot is a druid style program that runs on the first time") ],
     "fetchmail"         =>  [ _("Mail Fetcher") , _("A Mail Fetcher from external Servers") ],
-    "freenet6"          =>  [ _("IPv6 Tunnel Broker"), _("A IPv6 Dinamic Tunnel Broker") ],
+    "freenet6"          =>  [ _("IPv6 Tunnel Broker"), _("A IPv6 Dynamic Tunnel Broker") ],
     "gdm"               =>	[ _("GNOME Display Manager"), _("gdm provides the GNOME equivalent of a \"login:\" prompt.") ],
-    "gpm"                   =>      [ _("console mouse support"), _("GPM adds mouse support to text-based Linux applications such the Midnight Commander. Is also allows mouse-based console cut-and-paste operations, and includes support for pop-up menus on the console.") ],
+    "gpm"                   =>      [ _("console mouse support"), _("GPM adds mouse support to text-based Linux applications such the Midnight Commander. It also allows mouse-based console cut-and-paste operations, and includes support for pop-up menus on the console.") ],
     "httpd"             =>      [ _("web server"), _("Apache is a World Wide Web server.  It is used to serve HTML files and CGI.") ],
 		"inetd"             =>	[ _("internet superserver"), _("inetd allows running one daemon to invoke several others, reducing load on the system.") ],
 		"iptables"          =>	[ _("administration tool for IPv4 packet filtering and NAT"), _("Iptables is used to set up, maintain, and inspect the tables of IP packet filter rules in the Linux kernel.") ],
@@ -67,8 +67,8 @@ sub gst_service_list_get_info
     "keytable"          =>      [ "", _("This package loads the selected keyboard map as set in /etc/sysconfig/keyboard.  This can be selected using the kbdconfig utility.  You should leave this enabled for most machines.") ],
 		"klogd"             =>	[ ("Kernel Log Daemon"), _("klogd is a system daemon which intercepts and logs Linux kernel messages.") ],
     "kudzu"             =>      [ "", _("This runs the hardware probe, and optionally configures changed hardware.") ],
-    "lircd"             =>      [ "", _("LIRC is a package that allows you to decode and send") ],
-    "lircmd"            =>      [ "", _("LIRC is a package that allows you to decode and send") ],
+    "lircd"             =>      [ "", _("LIRC is a package that allows you to decode and send infra-red signals of many commonly used remote controls") ],
+    "lircmd"            =>      [ "", _("LIRC is a package that allows you to decode and send infra-red signals of many commonly used remote controls") ],
     "lpd"               =>      [ "", _("lpd is the print daemon required for lpr to work properly. It is basically a server that arbitrates print jobs to printer(s).") ],
     "metalog"           =>      [ _("Syslog Replacement"), _("Modern logging daemon") ],
     "module-init-tools" =>      [ _("tools for managing Linux kernel modules"), _("tools for managing Linux kernel modules") ],
