@@ -1,5 +1,9 @@
 2004-01-07  Carlos Garnacho Parro  <garnacho@tuxerver.net>
 
+	* service-list.pl.in: fixed some strings, thanks to Elros Cyriatan
+
+2004-01-07  Carlos Garnacho Parro  <garnacho@tuxerver.net>
+
 	* services-conf.in, services.pl.in, time-conf.in, users-conf.in,
 	  network-conf.in, network.pl.in: added support for mandrake 9.2
 
